samples/_failures_safe/1761138024_cac56c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_316b4ea1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_316b4ea1.c:174:20: error: ‘is’ undeclared (first use in this function)
  174 |         } else if (is
      |                    ^~
./samples/SAFE/__tmp_316b4ea1.c:174:20: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_316b4ea1.c:174:22: error: expected ‘)’ at end of input
  174 |         } else if (is
      |                   ~  ^
      |                      )
./samples/SAFE/__tmp_316b4ea1.c:174:9: error: expected declaration or statement at end of input
  174 |         } else if (is
      |         ^
./samples/SAFE/__tmp_316b4ea1.c:174:9: error: expected declaration or statement at end of input
